[build-system]
requires = [
    "setuptools",
    "some-build-toolkit",
]
build-backend = "setuptools.build_meta"

[project]
name = "stego_hrchlhck"
version = "1.0.0"
authors = [
  { name="Pedro Horchulhack" },
]
description = "LSB Image Steganography"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
  "opencv-python"
]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["stego"]  # package names should match these glob patterns (["*"] by default)
exclude = ["exemplos"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[project.urls]
Homepage = "https://github.com/ciberseguranca-pucpr/esteganografia"
Issues = "https://github.com/ciberseguranca-pucpr/esteganografia/issues"