[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "stego_hrchlhck"
version = "1.0.0"
authors = [
  { name="Pedro Horchulhack" },
]
description = "LSB Image Steganography"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
  "opencv-python"
]

[tool.setuptools]
packages = ["steg"]

[project.urls]
Homepage = "https://github.com/ciberseguranca-pucpr/esteganografia"
Issues = "https://github.com/ciberseguranca-pucpr/esteganografia/issues"